Changelog: Tests completed, Working flawlessly looks ugly though.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <header>
-    <h1>Eat Da Burger!</h1>
+    <h1>🍔 Jerger Hub</h1>
 </header><!-- /header -->
 
 <div class="wrapper">
@@ -25,7 +25,7 @@
             {{/each}}
         </div>
         <div id="burgers-devoured">
-            <h2>Burger's Created</h2>
+            <h2>Burger's Consumed</h2>
             {{#each burgers}}
             {{#if this.devoured}}
             <div class="burger">{{burger_name}} <span>#{{id}}</span></div>
